# djangoProject

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
apps/case/: urls.py  views.py
apps/node/: apps.py
celery/: Dockerfile
djangoProject/: urls.py  wsgi.py
nginx/: Dockerfile  default.conf  django.conf  nginx.conf
settings/: base.py  celery.py  dev.py
uwsgi/: uwsgi-dev.ini  uwsgi.ini
